// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal with Footer 1`] = `
Snapshot Diff:
- Default Render
+ Current Render: {"content":{"key":null,"ref":null,"props":{"children":[{"type":"p","key":null,"ref":null,"props":{"children":"content"},"_owner":null,"_store":{}},{"key":null,"ref":null,"props":{"children":{"type":"p","key":null,"ref":null,"props":{"children":"footer"},"_owner":null,"_store":{}}},"_owner":null,"_store":{}}]},"_owner":null,"_store":{}}}

@@ --- --- @@
            <p>
              content
            </p>
+           <div
+             class="container"
+           >
+             <p>
+               footer
+             </p>
+           </div>
          </div>
        </div>
      </div>
`;

exports[`Modal with Header 1`] = `
Snapshot Diff:
- Default Render
+ Current Render: {"content":{"key":null,"ref":null,"props":{"children":[{"key":null,"ref":null,"props":{"title":"ModalHeader Title"},"_owner":null,"_store":{}},{"type":"p","key":null,"ref":null,"props":{"children":"content"},"_owner":null,"_store":{}}]},"_owner":null,"_store":{}}}

@@ --- --- @@
          <div
            class="container"
          >
+           <div
+             class="container"
+           >
+             <p
+               aria-level="1"
+               class="title"
+               role="heading"
+             >
+               ModalHeader Title
+             </p>
+             <div
+               class="closeButton"
+             >
+               <div
+                 class="iconButtonContainer"
+               >
+                 <button
+                   aria-busy="false"
+                   aria-disabled="false"
+                   class="l3_style_circle_button l3-style-button l3-style-button--size-medium l3-style-button--kind-tertiary l3-style-button--color-primary l3-style-button--no-side-padding"
+                   data-testid="icon-button"
+                   style="justify-content: center; align-items: center; padding: 0px; width: 36px; height: 36px;"
+                   type="button"
+                 >
+                   <svg
+                     aria-hidden="true"
+                     class="icon_component icon-button-padding icon_component--no-focus-style"
+                     fill="currentColor"
+                     height="16"
+                     viewBox="0 0 20 20"
+                     width="16"
+                   >
+                     <path
+                       clip-rule="evenodd"
+                       d="M3.53033 2.46967C3.23744 2.17678 2.76256 2.17678 2.46967 2.46967C2.17678 2.76256 2.17678 3.23744 2.46967 3.53033L8.97639 10.037L2.47093 16.5425C2.17804 16.8354 2.17804 17.3103 2.47093 17.6032C2.76382 17.8961 3.2387 17.8961 3.53159 17.6032L10.037 11.0977L16.5425 17.6032C16.8354 17.8961 17.3103 17.8961 17.6032 17.6032C17.8961 17.3103 17.8961 16.8354 17.6032 16.5425L11.0977 10.037L17.6044 3.53033C17.8973 3.23744 17.8973 2.76256 17.6044 2.46967C17.3115 2.17678 16.8367 2.17678 16.5438 2.46967L10.037 8.97639L3.53033 2.46967Z"
+                       fill="currentColor"
+                       fill-rule="evenodd"
+                     />
+                   </svg>
+                 </button>
+               </div>
+             </div>
+           </div>
            <p>
              content
            </p>
`;

exports[`Modal with alertDialog 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`Modal with all parts 1`] = `
Snapshot Diff:
- Default Render
+ Current Render: {"content":{"key":null,"ref":null,"props":{"children":[{"key":null,"ref":null,"props":{"title":"ModalHeader Title"},"_owner":null,"_store":{}},{"key":null,"ref":null,"props":{"children":{"type":"p","key":null,"ref":null,"props":{"children":"content"},"_owner":null,"_store":{}}},"_owner":null,"_store":{}},{"key":null,"ref":null,"props":{"children":{"type":"p","key":null,"ref":null,"props":{"children":"footer"},"_owner":null,"_store":{}}},"_owner":null,"_store":{}}]},"_owner":null,"_store":{}}}

@@ --- --- @@
          <div
            class="container"
          >
+           <div
+             class="container"
+           >
+             <p
+               aria-level="1"
+               class="title"
+               role="heading"
+             >
+               ModalHeader Title
+             </p>
+             <div
+               class="closeButton"
+             >
+               <div
+                 class="iconButtonContainer"
+               >
+                 <button
+                   aria-busy="false"
+                   aria-disabled="false"
+                   class="l3_style_circle_button l3-style-button l3-style-button--size-medium l3-style-button--kind-tertiary l3-style-button--color-primary l3-style-button--no-side-padding"
+                   data-testid="icon-button"
+                   style="justify-content: center; align-items: center; padding: 0px; width: 36px; height: 36px;"
+                   type="button"
+                 >
+                   <svg
+                     aria-hidden="true"
+                     class="icon_component icon-button-padding icon_component--no-focus-style"
+                     fill="currentColor"
+                     height="16"
+                     viewBox="0 0 20 20"
+                     width="16"
+                   >
+                     <path
+                       clip-rule="evenodd"
+                       d="M3.53033 2.46967C3.23744 2.17678 2.76256 2.17678 2.46967 2.46967C2.17678 2.76256 2.17678 3.23744 2.46967 3.53033L8.97639 10.037L2.47093 16.5425C2.17804 16.8354 2.17804 17.3103 2.47093 17.6032C2.76382 17.8961 3.2387 17.8961 3.53159 17.6032L10.037 11.0977L16.5425 17.6032C16.8354 17.8961 17.3103 17.8961 17.6032 17.6032C17.8961 17.3103 17.8961 16.8354 17.6032 16.5425L11.0977 10.037L17.6044 3.53033C17.8973 3.23744 17.8973 2.76256 17.6044 2.46967C17.3115 2.17678 16.8367 2.17678 16.5438 2.46967L10.037 8.97639L3.53033 2.46967Z"
+                       fill="currentColor"
+                       fill-rule="evenodd"
+                     />
+                   </svg>
+                 </button>
+               </div>
+             </div>
+           </div>
+           <div
+             class="container"
+           >
              <p>
                content
+             </p>
+           </div>
+           <div
+             class="container"
+           >
+             <p>
+               footer
              </p>
+           </div>
          </div>
        </div>
      </div>
`;

exports[`Modal with base props 1`] = `
<div>
  <div
    aria-labelledby="modal-id-title"
    aria-modal="true"
    class="container"
    data-testid="l3-dialog-container"
    id="modal-id"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="overlay"
      data-testid="l3-modal-overlay"
    />
    <div
      class="dialog light"
      role="document"
    >
      <div>
        <div
          class="container"
        >
          <p
            aria-level="1"
            class="title"
            id="modal-id-title"
            role="heading"
          >
            Modal Title
          </p>
          <div
            class="closeButton"
          >
            <div
              class="iconButtonContainer"
            >
              <span
                class="referenceWrapper"
              >
                <button
                  aria-busy="false"
                  aria-disabled="false"
                  aria-label="close"
                  class="l3_style_circle_button l3-style-button l3-style-button--size-medium l3-style-button--kind-tertiary l3-style-button--color-primary l3-style-button--no-side-padding"
                  data-testid="icon-button"
                  style="justify-content: center; align-items: center; padding: 0px; width: 36px; height: 36px;"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="icon_component icon-button-padding icon_component--no-focus-style"
                    fill="currentColor"
                    height="16"
                    viewBox="0 0 20 20"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3.53033 2.46967C3.23744 2.17678 2.76256 2.17678 2.46967 2.46967C2.17678 2.76256 2.17678 3.23744 2.46967 3.53033L8.97639 10.037L2.47093 16.5425C2.17804 16.8354 2.17804 17.3103 2.47093 17.6032C2.76382 17.8961 3.2387 17.8961 3.53159 17.6032L10.037 11.0977L16.5425 17.6032C16.8354 17.8961 17.3103 17.8961 17.6032 17.6032C17.8961 17.3103 17.8961 16.8354 17.6032 16.5425L11.0977 10.037L17.6044 3.53033C17.8973 3.23744 17.8973 2.76256 17.6044 2.46967C17.3115 2.17678 16.8367 2.17678 16.5438 2.46967L10.037 8.97639L3.53033 2.46967Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </span>
            </div>
          </div>
        </div>
        <div
          class="container"
        >
          <p>
            content
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal with class names 1`] = `
Snapshot Diff:
- Default Render
+ Current Render: {"content":{"type":"p","key":null,"ref":null,"props":{"children":"content"},"_owner":null,"_store":{}},"classNames":{"container":"container","overlay":"overlay","modal":"modal"}}

@@ --- --- @@
    <div
      aria-labelledby="modal-id-title"
      aria-modal="true"
-     class="container"
+     class="container container"
      data-testid="l3-dialog-container"
      id="modal-id"
      role="dialog"
      tabindex="-1"
    >
      <div
-       class="overlay"
+       class="overlay overlay"
        data-testid="l3-modal-overlay"
      />
      <div
-       class="dialog light"
+       class="dialog modal light"
        role="document"
      >
        <div>
`;

exports[`Modal with closeButtonAriaLabel 1`] = `
Snapshot Diff:
- Default Render
+ Current Render: {"content":{"type":"p","key":null,"ref":null,"props":{"children":"content"},"_owner":null,"_store":{}},"closeButtonAriaLabel":"closeButtonAriaLabel"}

@@ --- --- @@
                  <button
                    aria-busy="false"
                    aria-disabled="false"
-                   aria-label="close"
+                   aria-label="closeButtonAriaLabel"
                    class="l3_style_circle_button l3-style-button l3-style-button--size-medium l3-style-button--kind-tertiary l3-style-button--color-primary l3-style-button--no-side-padding"
                    data-testid="icon-button"
                    style="justify-content: center; align-items: center; padding: 0px; width: 36px; height: 36px;"
`;

exports[`Modal with description 1`] = `
Snapshot Diff:
- Default Render
+ Current Render: {"content":{"type":"p","key":null,"ref":null,"props":{"children":"content"},"_owner":null,"_store":{}},"description":"description"}

@@ --- --- @@
              Modal Title
            </p>
            <div
+             class="description"
+           >
+             description
+           </div>
+           <div
              class="closeButton"
            >
              <div
`;

exports[`Modal with hideCloseButton 1`] = `
Snapshot Diff:
- Default Render
+ Current Render: {"content":{"type":"p","key":null,"ref":null,"props":{"children":"content"},"_owner":null,"_store":{}},"hideCloseButton":true}

@@ --- --- @@
            >
              Modal Title
            </p>
-           <div
-             class="closeButton"
-           >
-             <div
-               class="iconButtonContainer"
-             >
-               <span
-                 class="referenceWrapper"
-               >
-                 <button
-                   aria-busy="false"
-                   aria-disabled="false"
-                   aria-label="close"
-                   class="l3_style_circle_button l3-style-button l3-style-button--size-medium l3-style-button--kind-tertiary l3-style-button--color-primary l3-style-button--no-side-padding"
-                   data-testid="icon-button"
-                   style="justify-content: center; align-items: center; padding: 0px; width: 36px; height: 36px;"
-                   type="button"
-                 >
-                   <svg
-                     aria-hidden="true"
-                     class="icon_component icon-button-padding icon_component--no-focus-style"
-                     fill="currentColor"
-                     height="16"
-                     viewBox="0 0 20 20"
-                     width="16"
-                   >
-                     <path
-                       clip-rule="evenodd"
-                       d="M3.53033 2.46967C3.23744 2.17678 2.76256 2.17678 2.46967 2.46967C2.17678 2.76256 2.17678 3.23744 2.46967 3.53033L8.97639 10.037L2.47093 16.5425C2.17804 16.8354 2.17804 17.3103 2.47093 17.6032C2.76382 17.8961 3.2387 17.8961 3.53159 17.6032L10.037 11.0977L16.5425 17.6032C16.8354 17.8961 17.3103 17.8961 17.6032 17.6032C17.8961 17.3103 17.8961 16.8354 17.6032 16.5425L11.0977 10.037L17.6044 3.53033C17.8973 3.23744 17.8973 2.76256 17.6044 2.46967C17.3115 2.17678 16.8367 2.17678 16.5438 2.46967L10.037 8.97639L3.53033 2.46967Z"
-                       fill="currentColor"
-                       fill-rule="evenodd"
-                     />
-                   </svg>
-                 </button>
-               </span>
-             </div>
-           </div>
          </div>
          <div
            class="container"
`;
